# PySCF_front

./: .coverage  .coverage.gooodapple.local.5126.XYTvxEUx  .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  TESTING_IMPLEMENTATION_SUMMARY.md  claude.md  mcp-server-setup.md  package-lock.json  package.json  pyscf-front-dev-setup.md  pyscf-front-requirements.md  quantum-chem-requirements.md  requirements-dev.txt  requirements.txt  run_dev.py  setup.py  test_agent_integration.py  test_alignment.py  test_environment.py  test_hf.py  test_tddft.py  tsconfig.json  webpack.config.ts
.github/: environment.yml
config/: server-config.json
mcp-server/: README.md  claude_desktop_config.json  claude_desktop_config.template.json  package-lock.json  package.json  tsconfig.json
pyscf-front/backend/: Dockerfile  pyproject.toml  requirements.txt
pyscf-front/backend/protos/: calculation.proto
pyscf-front/backend/src/: __init__.py  grpc_service.py  main.py
pyscf-front/backend/src/api/: grpc_server.py
pyscf-front/backend/src/core/: __init__.py  config.py  database.py  pyscf_config.py  pyscf_engine.py
pyscf-front/backend/src/database/: connection.py  models.py
pyscf-front/backend/src/grpc_stubs/: calculation_pb2.py  calculation_pb2_grpc.py
src/python/: .coverage  .coverage.gooodapple.local.22949.XdVdophx  __init__.py  app.py  config.py  generated_models.py  pyproject.toml  pytest.ini  run_geometry_tests.py  validation_models.py
src/python/SMILES/: smiles_converter.py
src/python/agent/: __init__.py  graph.py  molecular_agent.py  supervisor.py  tools.py  utils.py
src/python/agent/common_tools/: __init__.py  analysis_tools.py  execution_tools.py
src/python/agent/computational_chemist/: __init__.py  computational_chemist_agent.py
src/python/agent/computational_chemist/prompts/: system_prompt.txt
src/python/agent/deep_researcher/: __init__.py  deep_researcher_agent.py
src/python/agent/deep_researcher/prompts/: system_prompt.txt
src/python/agent/literature_surveyor/: __init__.py  literature_surveyor_agent.py  tools.py
src/python/agent/literature_surveyor/prompts/: analyze_prompt.txt  synthesize_prompt.txt  system_prompt.txt
src/python/agent/molecular_designer/: __init__.py  molecular_designer_agent.py  tools.py
src/python/agent/molecular_designer/prompts/: system_prompt.txt
src/python/agent/prompts/: system_prompt.txt
src/python/agent/quantum_calc/: __init__.py  quantum_calc_worker.py
src/python/agent/quantum_calc/prompts/: system_prompt.txt
src/python/agent/quantum_calculator/: __init__.py  quantum_calculator_agent.py
src/python/agent/quantum_calculator/prompts/: system_prompt.txt
src/python/agent/report_writer/: __init__.py  report_writer_worker.py  tools.py
src/python/agent/report_writer/prompts/: system_prompt.txt
src/python/agent/research/: __init__.py  agent.py  tools.py
src/python/agent/research/prompts/: synthesize_prompt.txt  system_prompt.txt
src/python/agent/science_analyst/: __init__.py  science_analyst_agent.py  tools.py
src/python/agent/science_analyst/prompts/: system_prompt.txt
src/python/agent/supervisor/: __init__.py  supervisor.py  tools.py
src/python/agent/supervisor/prompts/: system_prompt.txt
src/python/api/: __init__.py  agent.py  chat_history.py  health.py  pubchem.py  quantum.py  settings.py  smiles.py  system.py
src/python/config/: server-config.json
src/python/data/: __init__.py  scale_factors.py  solvent_properties.py
src/python/database/: __init__.py  chat_history.py
src/python/pubchem/: __init__.py  client.py  parser.py
src/python/pyscf_pubchem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/python/quantum_calc/: __init__.py  base_calculator.py  casci_calculator.py  casscf_calculator.py  ccsd_calculator.py  config_manager.py  dft_calculator.py  exceptions.py  file_manager.py  file_watcher.py  hf_calculator.py  ir_spectrum.py  mp2_calculator.py  orbital_generator.py  pause_manager.py  process_manager.py  resource_manager.py  settings_manager.py  solvent_effects.py  supported_parameters.py  tddft_calculator.py
src/python/research/: agent.py  tools.py
src/python/services/: __init__.py  chat_history_service.py  exceptions.py  pubchem_service.py  quantum_service.py  settings_service.py  smiles_service.py  system_service.py
src/python/tests/: E2E_TEST_SCENARIOS.md  README.md  __init__.py  conftest.py  run_geometry_tests.py  test_agent_tools.py  test_casci_casscf.py  test_concurrent_websockets.py  test_error_scenarios.py  test_file_watcher.py  test_fixtures.py  test_flask_api.py  test_geometry_optimization.py  test_pubchem.py  test_quantum_calc.py  test_websocket_integration.py
src/python/tests/data/: README.md  __init__.py  mock_pubchem_response.json  sample_h2.xyz  sample_water.xyz
src/python/tests/integration/: __init__.py  test_calculation_workflow.py  test_pause_resume_workflow.py  test_websocket_handlers.py
src/python/tests/integration/test_api_endpoints/: __init__.py  test_agent_api.py  test_health_api.py  test_pubchem_api.py  test_quantum_api.py  test_smiles_api.py
src/python/tests/unit/: __init__.py
src/python/tests/unit/test_agent/: __init__.py  test_dispatcher_graph.py  test_molecular_agent.py  test_research_agent.py  test_research_tools.py  test_tools.py
src/python/tests/unit/test_quantum_calc/: __init__.py  test_dft_calculator.py  test_hf_calculator.py
src/python/tests/unit/test_services/: __init__.py  test_pubchem_service.py  test_quantum_service.py  test_smiles_service.py
src/python/websocket/: __init__.py  handlers.py
(+240 files in other folders)
