[project]
name = "pyscf-front-backend"
version = "0.1.0"
description = "PubChem integration backend for PySCF Native App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "flask-cors>=4.0.0",
    "certifi>=2024.7.4",
    "rdkit>=2025.3.5",
    "pyscf>=2.10.0",
    "geometric>=1.1",
    "pydantic>=2.11.7",
    "flask-pydantic>=0.13.1",
    "datamodel-code-generator>=0.25.0",
    "flask-sock>=0.7.0",
    "gevent>=25.5.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
]
