[project]
name = "pyscf-front-backend"
version = "0.1.0"
description = "PubChem integration backend for PySCF Native App"
readme = "README.md"
requires-python = ">=3.12"

# Dependencies are managed in .github/environment.yml
# This ensures consistency between development, CI, and production environments.
# The conda environment provides optimized scientific computing libraries
# with OpenMP support for better PySCF performance.
#
# To set up the environment:
# 1. Install Miniforge: https://github.com/conda-forge/miniforge
# 2. Create environment from file: conda env create -f .github/environment.yml
# 3. Activate: conda activate pyscf-env
#
# For development with testing:
# The environment includes pytest and pytest-flask for running tests.
